fix bug of text-overflow.

--- a/Web/static/style.css
+++ b/Web/static/style.css
@@ -12,29 +12,32 @@
   border-radius: 0.25rem;
 }
 
-
 .highlight {
   background-color: yellow;
   padding: 0 2px;
 }
 
 #scrollToTop {
-font-size: 2rem;
+  font-size: 2rem;
 }
 #scrollToTop:hover {
-color: #111;
+  color: #111;
 }
 
 input:checked ~ .toggle-bg {
-background-color: #48bb78; /* Change this color for a different active background color */
+  background-color: #48bb78; /* Change this color for a different active background color */
 }
 
 input:checked ~ .toggle-dot {
-transform: translateX(100%);
+  transform: translateX(100%);
 }
 
 .toggle-dot {
-top: -0.25rem; /* Updated position for better alignment */
-left: -0.25rem;
-transition-property: transform, background-color;
+  top: -0.25rem; /* Updated position for better alignment */
+  left: -0.25rem;
+  transition-property: transform, background-color;
+}
+
+.overflow-wrap-anywhere {
+  overflow-wrap: anywhere;
 }
